# powsybl-open-loadflow

./: .gitignore  CMakeLists.txt  README-smooth-reactive-limits.md  README.md  THIRD-PARTY.properties  THIRD-PARTY.txt  TODO.md  log.txt  pom.xml  rte-loadflow-default-parameters.json
.github/workflows/: codegen-check.yml  maven.yml  native.yml
codegen/: README.md  check_scatter.py  extract_golden.py  generate.py  prove_equivalence.py  regenerate.sh  requirements.txt
codegen/bench/: gen_contingencies.py
codegen/equations/: __init__.py  closed_branch.py  closed_branch_i.py  hvdc.py  open_branch.py  open_branch_i.py  shunt.py
codegen/golden/: closed_branch.golden.json  closed_branch_i.golden.json  hvdc.golden.json  open_branch.golden.json  open_branch_i.golden.json  shunt.golden.json
codegen/templates/: formulas.java.j2  fused.cuh.j2
docs/: README.md  conf.py  index.md
docs/acdc loadflow/: BipolarModel.md
docs/advanced_programming/: contingency_active_power_loss.md  equation_system_postprocessor.md  external_ac_solver.md  index.md  lfnetwork_loader_postprocessor.md  lfnetwork_postprocessor.md  open_loadflow_architecture.md  outerloop_configuration.md
docs/detailed_models_description/: equations.md  index.md  outerloops.md
docs/loadflow/: index.md  loadflow.md  openlf.md  parameters.md
docs/security/: index.md  inputs.md  parameters.md  programming.md  security.md
docs/sensitivity/: getting_started.md  index.md  parameters.md  sensitivity.md
native/: build-gpu.sh
native/cuda/: closed_branch.cuh  closed_branch.scatter.json  closed_branch_scatter.h  hvdc.cuh  hvdc.scatter.json  hvdc_scatter.h  open_branch.cuh  open_branch.scatter.json  open_branch_scatter.h  run_gpu_tests.sh  shunt.cuh  shunt.scatter.json  shunt_scatter.h
native/cuda/jni/: olf_gpu_nr_jni.cu
src/main/java/com/powsybl/: DefaultKnitroSolverStoppingCriteria.java  KnitroSolver.java  KnitroSolverFactory.java  KnitroSolverParameters.java  KnitroSolverStoppingCriteria.java  NonLinearExternalSolverUtils.java
src/main/java/com/powsybl/knitroextension/: DefaultKnitroSolverStoppingCriteria.java  ExternalSolverExtensionParameters.java  KnitroSolver.java  KnitroSolverFactory.java  KnitroSolverParameters.java  KnitroSolverStoppingCriteria.java  NonLinearExternalSolverUtils.java
src/main/java/com/powsybl/openloadflow/: AbstractAcOuterLoopConfig.java  AbstractDcOuterLoopConfig.java  AbstractHvdcAcEmulationFlowEquationTerm.java  AbstractIncrementalPhaseControlOuterLoop.java  AbstractLoadFlowContext.java  AbstractLoadFlowFromCache.java  AbstractLoadFlowParameters.java  AbstractPhaseControlOuterLoop.java  AcLoadFlowFromCache.java  AcOuterLoopConfig.java  AcOuterLoopGroupContext.java  CompareKnitroToNewtonRaphson.java  DcLoadFlowFromCache.java  DcOuterLoopConfig.java  DefaultAcOuterLoopConfig.java  DefaultDcOuterLoopConfig.java  DefaultOuterLoopConfig.java  ExplicitAcOuterLoopConfig.java  ExplicitDcOuterLoopConfig.java  FullVoltageInitializer.java  IncrementalContextData.java  LfBranchContingency.java  LfBranchTripping.java  LfContingency.java  LfContingencyTopologyTraverser.java  LoadFlowParametersOverride.java  NetworkCache.java  NetworkVariantPool.java  OpenLoadFlowParameterJsonSerializer.java  OpenLoadFlowParameters.java  OpenLoadFlowProvider.java  OpenLoadFlowReportConstants.java  OpenSecurityAnalysis.java  OpenSecurityAnalysisFactory.java  OpenSensitivityAnalysis.java  OpenSensitivityAnalysisParameters.java  OpenSensitivityAnalysisProvider.java  OuterLoop.java  OuterLoopConfig.java  OuterLoopContext.java  (+10 more)
src/main/java/test/: Test.java
src/main/resources/: logback.xml  voltageSlopeReactivePowerControl.xsd
src/main/resources-native-image/: logback.xml
src/test/resources/: 2.xiidm  3Nodes1LineOpen.uct  OLFParametersUpdate.json  TestCase16Nodes.uct  areaInterchangeControlOuterLoop.txt  areaInterchangeControlOuterloop.txt  busAlreadyControlledWithDifferentTargetVReport.txt  configFirstSlackBusSelector.yml  configLowImpedanceThreshold.yml  configMostMeshedSlackBusSelector.yml  configNameSlackBusSelector.yml  contingencies.json  controllerShuntAlreadyInVoltageControlReport.txt  debug-contingencies.json  debug-factors.json  debug-network.xiidm  debug-parameters.json  debug-variable-sets.json  detailedNrReportSecurityAnalysis.txt  esgTutoReport.txt  esgTutoReport2.txt  esgTutoReportDetailedNrLogsLf.txt  esgTutoReportDetailedNrLogsLfSa.txt  esgTutoReportDetailedNrLogsSa.txt  esgTutoReportDetailedNrReportLf.txt  esgTutoReportDetailedNrReportLfSa.txt  esgTutoReportDetailedNrReportSa.txt  esgTutoReportDetailedNrReportSensi.txt  generatorVoltageControlDiscarded.txt  generatorsConnectedToSameBusNotControllingSameBusReport.txt  init_v_zero_imp_loop.xiidm  lfc.json  logback-test.xml  multipleConnectedComponentsAcReport.txt  multipleConnectedComponentsDcReport.txt  n.json  n2.json  nb.dot  notUniqueTargetVControllerBusReport.txt  ratioTapChangerVoltageControlDiscarded.txt  (+20 more)
src/test/resources/i18n/: reports.properties  reports_fr.properties
src/test/resources/ieeeFeeder123/: Bus.csv  DistributedLoad.csv  Gen.csv  Line.csv  LineConfig.csv  Regulator.csv  SpotLoad.csv  Tfo.csv  TfoConfig.csv
src/test/resources/ieeeFeeder13/: Bus.csv  DistributedLoad.csv  Gen.csv  Line.csv  LineConfig.csv  Regulator.csv  SpotLoad.csv  Tfo.csv  TfoConfig.csv
src/test/resources/ieeeFeeder34/: Bus.csv  DistributedLoad.csv  Gen.csv  Line.csv  LineConfig.csv  Regulator.csv  SpotLoad.csv  Tfo.csv  TfoConfig.csv
src/test/resources/issue_1416/: actions-gen-load.json  contingency.json  network.xiidm  strategies.json
src/test/resources/xsd/: substationAutomationSystems.xsd
(+1965 files in other folders)
