# Copyright (c) 2026, RTE (http://www.rte-france.com)
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Native build for OLF's GPU Newton-Raphson (same packaging pattern as
# powsybl-math-native): builds the JNI shared library libolfgpu into
# target/classes/natives/<arch>/, where it is picked up as a classpath resource by
# org.scijava.nativelib.NativeLoader (see
# com.powsybl.openloadflow.ac.equations.vector.gpu.GpuAcNewtonSolver) and bundled
# into the jar by the ordinary `mvn package`.
#
# This build is OPT-IN: the normal Maven build never invokes CMake, so the standard
# (no-CUDA) build and CI are completely unaffected — without this build there is
# simply no natives/ directory and the GPU code paths report isAvailable() == false.
# Building requires the CUDA toolkit AND cuDSS:
#
#   cmake -S . -B native/build -DCMAKE_BUILD_TYPE=Release \
#         -DCMAKE_CUDA_COMPILER=/path/to/cuda/bin/nvcc \
#         -DCMAKE_CUDA_ARCHITECTURES=86 \
#         -DCUDSS_ROOT=/path/to/cudss
#   cmake --build native/build
#
# (or just run native/build-gpu.sh, which defaults all of the above).
#
# DISTRIBUTION: libolfgpu is OUR wrapper (MPL) and ships in the jar; only NVIDIA's
# libcudss.so itself may not. cudart is linked STATICALLY; cuDSS is linked
# DYNAMICALLY (a NEEDED reference, never bundled — the same licensing posture as
# powsybl-math-native's libmathcudss). The default build is location-independent
# (no RPATH): at runtime the Java loader (GpuAcNewtonSolver) PRELOADS
# libcublasLt/libcublas/libcudss from the user's install (olf.cudss.path /
# CUDSS_ROOT, olf.cuda.path / CUDA_HOME), which satisfies the NEEDED resolution
# from the process link map. CUDSS_EMBED_RPATH instead bakes an absolute DT_RPATH
# (--disable-new-dtags) to the cuDSS + CUDA toolkit lib dirs — only for non-JVM
# consumers of a LOCAL build, never for a jar meant to leave this machine.

cmake_minimum_required(VERSION 3.18.0)

if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
    set(CMAKE_CUDA_ARCHITECTURES 86)
endif()

project(olfgpu LANGUAGES CXX CUDA)

find_package(JNI REQUIRED)
find_package(CUDAToolkit REQUIRED)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CUDA_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(CUDSS_ROOT "" CACHE PATH "Path to the cuDSS install (contains include/ and lib/)")
find_path(CUDSS_INCLUDE_DIR cudss.h HINTS ${CUDSS_ROOT}/include REQUIRED)
find_library(CUDSS_LIBRARY cudss HINTS ${CUDSS_ROOT}/lib REQUIRED)
message(STATUS "cuDSS header: ${CUDSS_INCLUDE_DIR}")
message(STATUS "cuDSS library: ${CUDSS_LIBRARY}")

# natives/<arch> layout expected by scijava native-lib-loader (same detection
# as powsybl-math-native's CMakeLists).
if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64" OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64")
    set(OS_BITS 64)
elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "arm64")
    set(OS_BITS arm64)
else()
    set(OS_BITS 32)
endif()

if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
    set(ARCHITECTURE windows_${OS_BITS})
elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
    set(ARCHITECTURE linux_${OS_BITS})
elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
    set(ARCHITECTURE osx_${OS_BITS})
else()
    message(FATAL_ERROR "System not supported: ${CMAKE_SYSTEM_NAME}")
endif()

# The JNI bridge lives in native/cuda/jni/; the fused formula kernels it includes
# (closed_branch.cuh, open_branch.cuh, shunt.cuh, hvdc.cuh + their scatter tables)
# are GENERATED by the codegen (codegen/regenerate.sh) and committed in native/cuda/.
add_library(olfgpu SHARED
    native/cuda/jni/olf_gpu_nr_jni.cu
)
target_include_directories(olfgpu
    PRIVATE
    ${JNI_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}/native/cuda
    ${CUDSS_INCLUDE_DIR}
)
target_link_libraries(olfgpu PRIVATE ${CUDSS_LIBRARY})
# Both batched N-1 solve modes (per-scenario loop + uniform batched cuDSS API) are compiled
# in and selected at RUNTIME via -Dolf.gpu.batchMode (default 0). cuDSS >= 0.7.1 is required
# (static_assert in olf_gpu_nr_jni.cu); the cudssMatrixCreate* data-type args are shimmed by
# CUDSS_VERSION so the same source builds against 0.7.x and 0.8 (CUDSS_ROOT picks the install).
set_target_properties(olfgpu PROPERTIES CUDA_RUNTIME_LIBRARY Static)
# No implicit build-tree RUNPATH: the artifact is used straight from the build
# output (never `cmake --install`ed), and a baked machine-local path would defeat
# the distributable no-RPATH default. CUDSS_EMBED_RPATH adds it back explicitly.
set_target_properties(olfgpu PROPERTIES SKIP_BUILD_RPATH TRUE)

option(CUDSS_EMBED_RPATH "Embed an absolute RPATH to cuDSS/CUDA so libolfgpu runs without LD_LIBRARY_PATH (local builds only)" OFF)
if(CUDSS_EMBED_RPATH)
    get_filename_component(CUDSS_LIBRARY_DIR "${CUDSS_LIBRARY}" DIRECTORY)
    target_link_options(olfgpu PRIVATE
        "-Wl,--disable-new-dtags"
        "-Wl,-rpath,${CUDSS_LIBRARY_DIR}:${CUDAToolkit_LIBRARY_DIR}")
endif()

set(OLF_NATIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/target/classes/natives/${ARCHITECTURE})
set_target_properties(olfgpu PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${OLF_NATIVE_OUTPUT_DIRECTORY})
set_target_properties(olfgpu PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${OLF_NATIVE_OUTPUT_DIRECTORY})
set_target_properties(olfgpu PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${OLF_NATIVE_OUTPUT_DIRECTORY})

message(STATUS "olfgpu -> ${OLF_NATIVE_OUTPUT_DIRECTORY} (full GPU Newton-Raphson, CUDA arch ${CMAKE_CUDA_ARCHITECTURES}, dynamic cuDSS)")
